# src/routes/user.router.js
@@ -9,5 +9,8 @@ router.post('/otp/verify', userController.verifyOtp);
 router.put('/password/reset', userController.resetPassword);
 router.get('/admin/:id', userController.getByIdAdmin);
 router.get('/:id', userController.getById);
+router.get('/admin', userController.get);
+router.put('/admin/:id', userController.update);
+router.put('/email/reset', userController.resetEmail);
 
 export default router;
